--- a/lemon_mall/lemon_mall/templates/index.html
+++ b/lemon_mall/lemon_mall/templates/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-	<title>美多商城-首页</title>
+	<title>Lemon Mall-Home page</title>
     <link rel="stylesheet" type="text/css" href="{{ static('css/reset.css') }}">
 	<link rel="stylesheet" type="text/css" href="{{ static('css/main.css') }}">
     <script type="text/javascript" src="{{ static('js/jquery-1.12.4.min.js') }}"></script>
@@ -13,10 +13,10 @@
 	<div id="app">
 	<div class="header_con">
 		<div class="header">
-			<div class="welcome fl">欢迎来到美多商城!</div>
+			<div class="welcome fl">Welcome to lemon mall!</div>
 			<div class="fr">
 				<div class="login_btn fl">
-                    欢迎您：<em>传智播客</em>
+                    Welcome：<em>Lemon</em>
                     <span>|</span>
                     <a href="#">退出</a>
                 </div>
@@ -37,7 +37,7 @@
 		</div>		
 	</div>
 	<div class="search_bar clearfix">
-		<a href="index.html" class="logo fl"><img src="{{ static('images/logo.png') }}"></a>
+		<a href="index.html" class="logo fl"><img src="{{ static('images/lemonmall.png') }}"></a>
 		<div class="search_wrap fl">
 			<form method="get" action="/search/" class="search_con">
                 <input type="text" class="input_text fl" name="q" placeholder="搜索商品">
