--- a/lemon_mall/lemon_mall/templates/index.html
+++ b/lemon_mall/lemon_mall/templates/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-	<title>Lemon Mall-Home page</title>
+	<title>Lemon Mall - Home page</title>
     <link rel="stylesheet" type="text/css" href="{{ static('css/reset.css') }}">
 	<link rel="stylesheet" type="text/css" href="{{ static('css/main.css') }}">
     <script type="text/javascript" src="{{ static('js/jquery-1.12.4.min.js') }}"></script>
@@ -11,27 +11,27 @@
 </head>
 <body>
 	<div id="app">
-	<div class="header_con">
+	<div class="header_con" v-cloak>
 		<div class="header">
 			<div class="welcome fl">Welcome to lemon mall!</div>
 			<div class="fr">
-				<div class="login_btn fl">
-                    Welcome：<em>Lemon</em>
+				<div v-if="username" class="login_btn fl">
+                    Welcome：<em>[[username]]</em>
                     <span>|</span>
-                    <a href="#">退出</a>
+                    <a href="{{url('users:logout')}}" class="quit">Quit</a>
                 </div>
-				<div class="login_btn fl">
-					<a href="login.html">登录</a>
+				<div v-else class="login_btn fl">
+					<a href="login.html">Login</a>
 					<span>|</span>
-					<a href="register.html">注册</a>
+					<a href="register.html">Register</a>
 				</div>
 				<div class="user_link fl">
 					<span>|</span>
-					<a href="user_center_info.html">用户中心</a>
+					<a href="{{ url('users:info') }}">User center</a>
 					<span>|</span>
-					<a href="cart.html">我的购物车</a>
+					<a href="cart.html">Shopping Cart</a>
 					<span>|</span>
-					<a href="user_center_order.html">我的订单</a>
+					<a href="user_center_order.html">My Orders</a>
 				</div>
 			</div>
 		</div>		
